2007-04-19  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-04-08
	* added include to BU.cc to reflect changes to Playback

2007-04-05  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-04-07
	* fixed 'makeXmlComm' in scripts/initialize
	* changed scripts/initialize such that for option '-noSM', the
	OutputModule(s) are still part of the configuration, but the EP
	property 'outputEnabled' is set to false.

2007-04-05  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-04-06
	* wait 10 seconds after halting the BU, to give it time to flush
	* adjust RB parameters to
	  nbCells =      32/     3/      3
	  cellSize=0x30000/0x30000/0x30000
	
2007-04-04  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-04-05
	* replace DQMExampleSource with SMDQMExampleSource
	* fix 'destroy' script to properly clean up shared memory

2007-04-02  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-04-04
	* integrate dqm testing with scripts/initialize
	* add path 'p4' running module 'dqm' to the standard configuration
	* add option '-noDQM' to switch the dqm testing module off

2007-03-30  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-04-03
	* improvements to scripts/initialize
	* the script detects now for all four packages if they are checked
	out locally or not
	* the '-playback' command line option can (must!) now be passed an
	argumnet, which is either a root file or an ASCII file with a list
	of root files

2007-03-29  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-04-02
	* add perl script 'scripts/initialize'
	* executing the script will start a complete AutoBU-RB-EP-SM
	system on the local machine
	* perl scripts 'configure', 'enable', 'stop', 'halt', and
	'destroy' are created as well. Execute them to control the system
	* destroy is actually going to remove any trace of your test,
	including the logs
	* command line options are:
	  -playback
	  -drop